# ovr-sys

./: Cargo.toml  README.md  build.rs  search-index.js
examples/: minimal.rs
ovr_sys/: OVR_BUILD_VERSION.v.html  OVR_DEBUG_HUD_STEREO_GUIDE_COLOR.v.html  OVR_DEBUG_HUD_STEREO_GUIDE_INFO_ENABLE.v.html  OVR_DEBUG_HUD_STEREO_GUIDE_POSITION.v.html  OVR_DEBUG_HUD_STEREO_GUIDE_SIZE.v.html  OVR_DEBUG_HUD_STEREO_GUIDE_YAWPITCHROLL.v.html  OVR_DEBUG_HUD_STEREO_MODE.v.html  OVR_DEFAULT_EYE_HEIGHT.v.html  OVR_DEFAULT_GENDER.v.html  OVR_DEFAULT_NECK_TO_EYE_HORIZONTAL.v.html  OVR_DEFAULT_NECK_TO_EYE_VERTICAL.v.html  OVR_DEFAULT_PLAYER_HEIGHT.v.html  OVR_FAILURE.v.html  OVR_FORMAT_B4G4R4A4_UNORM.v.html  OVR_FORMAT_B5G5R5A1_UNORM.v.html  OVR_FORMAT_B5G6R5_UNORM.v.html  OVR_FORMAT_B8G8R8A8_UNORM.v.html  OVR_FORMAT_B8G8R8A8_UNORM_SRGB.v.html  OVR_FORMAT_B8G8R8X8_UNORM.v.html  OVR_FORMAT_B8G8R8X8_UNORM_SRGB.v.html  OVR_FORMAT_BC1_UNORM.v.html  OVR_FORMAT_BC1_UNORM_SRGB.v.html  OVR_FORMAT_BC2_UNORM.v.html  OVR_FORMAT_BC2_UNORM_SRGB.v.html  OVR_FORMAT_BC3_UNORM.v.html  OVR_FORMAT_BC3_UNORM_SRGB.v.html  OVR_FORMAT_BC6H_SF16.v.html  OVR_FORMAT_BC6H_UF16.v.html  OVR_FORMAT_BC7_UNORM.v.html  OVR_FORMAT_BC7_UNORM_SRGB.v.html  OVR_FORMAT_D16_UNORM.v.html  OVR_FORMAT_D24_UNORM_S8_UINT.v.html  OVR_FORMAT_D32_FLOAT.v.html  OVR_FORMAT_D32_FLOAT_S8X24_UINT.v.html  OVR_FORMAT_R11G11B10_FLOAT.v.html  OVR_FORMAT_R16G16B16A16_FLOAT.v.html  OVR_FORMAT_R8G8B8A8_UNORM.v.html  OVR_FORMAT_R8G8B8A8_UNORM_SRGB.v.html  OVR_FORMAT_UNKNOWN.v.html  OVR_KEY_EYE_HEIGHT.v.html  (+710 more)
src/: audio.rs  directx.rs  lib.rs  (+2 more)
(+76 files in other folders)
