[package]
name = "ovr-sys"
version = "0.2.3-pre"
authors = ["Dylan Ede <dylanede@googlemail.com>"]
description = """
Well documented raw bindings to libOVR v1.15.0, the Oculus Rift PC runtime library.

Documentation is transformed from the original libOVR doxygen docs.

Requires acceptance of the Oculus SDK License, included.
\
"""
documentation = "https://docs.rs/ovr-sys/*/x86_64-pc-windows-gnu/ovr_sys/"
repository = "https://github.com/dylanede/ovr-sys"
readme = "README.md"
license = "MIT / Apache-2.0"
keywords = ["oculus", "rift", "libovr", "vr", "ovr"]
build = "build.rs"

links = "ovr"

[dependencies]
libc = "^0.2"
vk-sys = { version = "^0.2", optional = true }
winapi = { version = "^0.2", optional = true }

[features]
default = ["opengl"]
opengl = []
directx = ["winapi"]
vulkan = ["vk-sys"]
audio = ["winapi"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

[package.metadata.release]
pre-release-commit-message = "Release {{version}} 🎉🎉"
pre-release-replacements = [ {file="README.md", search='ovr-sys = "[a-z0-9\\.-]+"', replace='ovr-sys = "{{version}}"'}, {file="README.md", search='version = "[a-z0-9\\.-]+"', replace='version = "{{version}}"'}]